--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -65,4 +65,33 @@
     height:100px;
     margin:0;
     background-color:#E3E3E3;
+    visibility:hidden;
+}
+
+.vertical-alignment-helper {
+    display:table;
+    height: 100%;
+    width: 100%;
+    pointer-events:none; /* This makes sure that we can still click outside of the modal to close it */
+}
+.vertical-align-center {
+    /* To center vertically */
+    display: table-cell;
+    vertical-align: middle;
+    pointer-events:none;
+}
+.modal-content {
+    /* Bootstrap sets the size of the modal in the modal-dialog class, we need to inherit it */
+    width:inherit;
+    max-width:inherit; /* For Bootstrap 4 - to avoid the modal window stretching full width */
+    height:inherit;
+    /* To center horizontally */
+    margin: 0 auto;
+    pointer-events: all;
+}
+
+.login-button {
+    background-color:#fd7e14;
+    text-transform: uppercase;
+    font-weight: 700;
 }
